# action-odds

backend/: config.py  pyproject.toml
backend/api/routes/: prediction_market.py
backend/features/: cve_downloads.py  cve_history.py  db.py  embedding.py  news_repository.py  package_enrichment.py  package_sectors.py  probability.py  recent_news.py
backend/models/: models.py
backend/scripts/: build_cve_history.py  classify_package_sectors_llm.py  enrich_package_sectors.py  enrich_packages.py  export_schema_excel.py  news_update.py  seed_top_packages.py
frontend/: index.html  package-lock.json  package.json
frontend/mocks/: gen_spotlight.py  market_spotlight.json  markets.json  recent_news.json  user.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: FeaturedMarket.tsx  GradeBadge.tsx  HotMarketsSidebar.tsx  MarketCard.tsx  MarketSpotlight.tsx  Navbar.tsx  RecentNews.tsx  SchmeckleChart.tsx  SchmeckleIcon.tsx
